--- a/documents.html
+++ b/documents.html
@@ -33,13 +33,12 @@
 <img alt="Logo" class="logo mini-logo" src="images/logo.png"/>
 <div>
 <strong>Arcadia Champion Lions Club</strong>
-<div class="small">Headquarters moved: 4046 Temple City Blvd, Ste 105, Rosemead, CA 91770-0000 → 608 E Valley, Ste D77 San Gabriel, CA 91776</div>
 <div class="small">© 2025 — All rights reserved.</div>
 </div>
 </div>
 <div class="mini-right">
 <div class="kv">
-<strong>Address</strong><div>608 E Valley, Ste D77 San Gabriel, CA 91776</div>
+<strong>Address</strong><div>4046 Temple City Blvd Ste 105 Rosemead, CA 91770-0000</div>
 <strong>Email</strong><div>contact@arcadiachampionlions.asia</div>
 <strong>Phone</strong><div>+1-479-689-1319</div>
 </div>
