--- a/policies.html
+++ b/policies.html
@@ -84,7 +84,7 @@
 <strong>Contact</strong>
 <p class="muted mt-2">
       For any privacy inquiries or policy-related feedback, please contact: contact@arcadiachampionlions.asia
-      Mailing address: 608 E Valley Blvd, Ste D77, San Gabriel, CA 91776.
+      Mailing address: 4046 Temple City Blvd Ste 105 Rosemead, CA 91770-0000.
     </p>
 <p class="muted mt-2 small">Version update: 2025-04-18</p>
 </div>
@@ -96,13 +96,12 @@
 <img alt="Logo" class="logo mini-logo" src="images/logo.png"/>
 <div>
 <strong>Arcadia Champion Lions Club</strong>
-<div class="small">Headquarters moved: 4046 Temple City Blvd, Ste 105, Rosemead, CA 91770-0000 → 608 E Valley, Ste D77 San Gabriel, CA 91776</div>
 <div class="small">© 2025 — All rights reserved.</div>
 </div>
 </div>
 <div class="mini-right">
 <div class="kv">
-<strong>Address</strong><div>608 E Valley, Ste D77 San Gabriel, CA 91776</div>
+<strong>Address</strong><div>4046 Temple City Blvd Ste 105 Rosemead, CA 91770-0000</div>
 <strong>Email</strong><div>contact@arcadiachampionlions.asia</div>
 <strong>Phone</strong><div>+1-479-689-1319</div>
 </div>
